Enabled LegacyDownloadManagerControllerTest.TestStart

Bug: 804250
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I9eeaaa9dc13a59ad9a5553cafde373028cce16b9