ios/chrome/browser/ui/download/legacy_download_manager_controller_unittest.mm
@@ -88,7 +88,8 @@ TEST_F(LegacyDownloadManagerControllerTest, TestXibViewConnections) {
 }
 
 // TODO(crbug.com/804250): this test is flaky.
-TEST_F(LegacyDownloadManagerControllerTest, FLAKY_TestStart) {
+TEST_F(LegacyDownloadManagerControllerTest, TestStart) {
+  ASSERT_TRUE(_controller);
   [_controller start];
   EXPECT_TRUE(
       [[UIApplication sharedApplication] isNetworkActivityIndicatorVisible]);
